--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/ButtonGridControl.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/ButtonGridControl.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dd="urn:gong-wpf-dragdrop"
     xmlns:controls="http://schemas.microsoft.com/netfx/2009/xaml/presentation" Width="941" Height="345">
 
     <!-- this is the theme for the button change this and all the buttons do this! -->
@@ -29,16 +30,19 @@
         </controls:StackPanel>-->
 
     <Grid>
-        <StackPanel x:Name="btnMenu" Width="100" Height="200" Margin="10,0,0,0" Visibility="Hidden" VerticalAlignment="Bottom" HorizontalAlignment="Left">
+        <StackPanel x:Name="btnMenu" Width="100" Height="130" Margin="5,0,0,0" Visibility="Hidden" VerticalAlignment="Bottom" HorizontalAlignment="Left">
             <Button Width="100" Height="40" Click="removeBtn" Background="GhostWhite" x:Name="rBtn" Content="Remove Button" Margin="0,0,0,0" />
-            <Button Width="100" Height="40" Click="okBtn" Background="GhostWhite" x:Name="cBtn" Content="Change Position" Margin="0,0,0,0"/>
-            <TextBlock Text="New Row" Margin="0,10,0,0" Visibility="Hidden" x:Name="rName"/>
+            <Button Width="100" Height="40" Click="changeBtn" Background="GhostWhite" x:Name="cBtn" Content="Change Position" Margin="0,0,0,0"/>
+            <Button Width="100" Height="40" Click="cancelBtn" Background="GhostWhite" x:Name="caBtn" Content="Cancel" Margin="0,0,0,0"/>
+            <!--     <TextBlock Text="New Row" Margin="0,10,0,0" Visibility="Hidden" x:Name="rName"/>
             <TextBox x:Name="rowIn" Visibility="Hidden"/>
             <TextBlock Text="New Col" Visibility="Hidden" x:Name="cName"/>
-            <TextBox x:Name="colIn" Visibility="Hidden"/>
-            <Button Content="Change" Background="GhostWhite" Width="50" Click="changeBtn" Visibility="Hidden" x:Name="but"/>
+            <TextBox x:Name="colIn" Visibility="Hidden"/> 
+            <Button Content="Change" Background="GhostWhite" Width="50" Click="changeBtn" Visibility="Hidden" x:Name="but"/>-->
         </StackPanel>
-        <controls:UniformGrid x:Name="grid" Margin="0,0,0,0" Rows="1" Columns="4"  />
+        <controls:UniformGrid x:Name="grid" Margin="0,0,0,0" Rows="1" Columns="4"  Visibility="Visible"/>
+        <controls:UniformGrid x:Name="myG" Rows="1" Columns="1"  Visibility="Hidden"/>
+
 
         <!--<Button Template="{StaticResource button}"  Content="1" Width="auto" Margin="11,10" KeyDown="Button_KeyDown" Click="Button_Click"/>
         <Button Template="{StaticResource button}" Content="2" Width="auto" Margin="14,10,13,10" KeyDown="Button_KeyDown" Click="Button_Click_1"/>
