--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
@@ -8,14 +8,14 @@
         mc:Ignorable="d"
         Height="540" Width="960"
         KeyDown="KeyInteractor"
-        Background="GhostWhite">
-    <!--WindowStyle="None"-->
-    <WindowChrome.WindowChrome>
+        Background="GhostWhite"
+        WindowStyle="None">
+    <!--<WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="{Binding ActualHeight,ElementName=titlebar}"/>
-    </WindowChrome.WindowChrome>
-        <ScrollViewer PanningMode="VerticalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" Margin="0,0,-8,0" >
+    </WindowChrome.WindowChrome>-->
+    <ScrollViewer PanningMode="VerticalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" Margin="0,0,-8,0" >
         <StackPanel x:Name="myGrid" RenderTransformOrigin="0.173,1.371" Orientation="Vertical" Height="509" VerticalAlignment="Top" Width="auto">
-
+            <!--
             <Border  Background="LightBlue" DockPanel.Dock="Top" Height="50" x:Name="titlebar" Width="auto">
                 <Grid VerticalAlignment="Top"  HorizontalAlignment="Left" Height="50" Width="956">
                     <Button Panel.ZIndex="5" VerticalAlignment="Center" HorizontalAlignment="Left" Width="40" Height="30" BorderBrush="#FF020202" Content="☰" Click="MenuClick">
@@ -27,75 +27,35 @@
                             </LinearGradientBrush>
                         </Button.Background>
                     </Button>
-                    <!-- These need to be changed to actual icons-->
-                    <controls:TextBlock VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,105,0" > -- </controls:TextBlock>
+                     These need to be changed to actual icons
+                <controls:TextBlock VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,105,0" >  </controls:TextBlock>
                     <controls:TextBlock VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,58,0"> [ ] </controls:TextBlock>
                     <controls:TextBlock VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,14,0" > X </controls:TextBlock>
                 </Grid>
             </Border>
-            <!--<local:TitleBar x:Name="titleBar" VerticalAlignment="Top"/>
+            <local:TitleBar x:Name="titleBar" VerticalAlignment="Top"/>
            
 -->
+            <Button Panel.ZIndex="5" VerticalAlignment="Center" HorizontalAlignment="Left" Width="40" Height="30" BorderBrush="#FF020202" Content="☰" Click="MenuClick">
+                <Button.Background>
+                    <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
+                        <GradientStop Color="White" Offset="1"/>
+                        <GradientStop Color="#FFCCCCFF"/>
+                        <GradientStop Color="#FFFFFCFC"/>
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
             <Grid Height="70">
-               
-                <local:MenuControl Canvas.ZIndex="3" x:Name="menu_control" Visibility="Hidden" Margin="4,-6,818,-99" />
-                <local:ButtonGridControl x:Name="grid" Margin="10,0,10,-422" Height="442" VerticalAlignment="Bottom" />
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="99*"/>
+                    <ColumnDefinition Width="468*"/>
+                    <ColumnDefinition Width="394*"/>
+                </Grid.ColumnDefinitions>
 
 
-                <!--     <Grid  Width="250" HorizontalAlignment="Left" Height="70" Margin="90,0,0,0">
-                    <StackPanel VerticalAlignment="Top" x:Name="layoutBtn" Visibility="Hidden" Orientation="Horizontal">
-                        <ComboBox Width="100" x:Name="myComboBox" SelectionChanged="LayoutClick" SelectedValuePath="Content" VerticalAlignment="Center">
-                            <ComboBoxItem IsSelected="True" >1x4</ComboBoxItem>
-                            <ComboBoxItem IsSelected="False" >2x2</ComboBoxItem>
-                            <ComboBoxItem IsSelected="False" >4x1</ComboBoxItem>
-                            <ComboBoxItem IsSelected="False" >5x5</ComboBoxItem>
-                        </ComboBox>
-                        <StackPanel Orientation="Vertical" Margin="10,0,0,0" >
-                        <Button Content="Enter your own" Width="100" Click="getInput" Margin="0,10,0,0" >
-                                <Button.Background>
-                                    <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
-                                        <GradientStop Color="White" Offset="1"/>
-                                        <GradientStop Color="#FFCCCCFF"/>
-                                        <GradientStop Color="#FFFFFCFC"/>
-                                    </LinearGradientBrush>
-                                </Button.Background>
-                            </Button>
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                <TextBox Width="39" Height="20" x:Name="inputBox" Visibility="Hidden"/>
-                                <Button Width="20" Height="20" Click="addLayout" x:Name="okInput" Visibility="Hidden"> OK </Button>
-                            </StackPanel>
-                        </StackPanel>
-                    </StackPanel>
-                </Grid>
-                <Grid VerticalAlignment="Center" Width="480" HorizontalAlignment="Left" Height="50" Margin="180,-5,0,0">
-                    <Button VerticalAlignment="Top" Width="60" Height="30" BorderBrush="#FF020202" Content="+" Visibility="Hidden" x:Name="newBtn" >
-                        <Button.Background>
-                            <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
-                                <GradientStop Color="White" Offset="1"/>
-                                <GradientStop Color="#FFCCCCFF"/>
-                                <GradientStop Color="#FFFFFCFC"/>
-                            </LinearGradientBrush>
-                        </Button.Background>
-                    </Button>
-                    <Button VerticalAlignment="Top" Width="60" Height="30" BorderBrush="#FF020202" Content="Move" Visibility="Hidden" x:Name="moveBtn" Margin="150,10,0,0" Click="mvClick">
-                        <Button.Background>
-                            <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
-                                <GradientStop Color="White" Offset="1"/>
-                                <GradientStop Color="#FFCCCCFF"/>
-                                <GradientStop Color="#FFFFFCFC"/>
-                            </LinearGradientBrush>
-                        </Button.Background>
-                    </Button>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,-180,0" Visibility="Hidden" x:Name="movementStack">
-                        <TextBlock VerticalAlignment="Center" Margin="0,0,10,0">Button Name:</TextBlock>
-                        <TextBox Width="39" Height="20" x:Name="moveBox" />
-                        <TextBlock VerticalAlignment="Center"  Margin="10,0,0,0">Row:</TextBlock>
-                        <TextBox Width="39" Height="20" Margin="10,0,10,0" x:Name="rowInput"></TextBox>
-                        <TextBlock VerticalAlignment="Center">Column: </TextBlock>
-                        <TextBox Width="39" Height="20" Margin="10,0,0,0" x:Name="colInput"></TextBox>
-                        <Button Width="20" Height="20" Click="mvRCSubmit" x:Name="RCSubmit" >OK</Button>
-                    </StackPanel>
-                </Grid> -->
+                <local:MenuControl Canvas.ZIndex="3" x:Name="menu_control" Visibility="Hidden" Margin="102.333,-6,227,-99" Grid.Column="1" />
+                <local:ButtonGridControl x:Name="grid" Margin="10,0,10,-422" Height="442" VerticalAlignment="Bottom" Grid.ColumnSpan="3" />
+
             </Grid>
             <Canvas Height="369">
                 <StackPanel x:Name="bottomBar" Visibility="Hidden" Canvas.Bottom="0" Orientation="Horizontal" VerticalAlignment="Bottom" Height="62" Background="Gainsboro" HorizontalAlignment="Right" Width="948" Canvas.Left="3" Canvas.Top="367">
@@ -107,34 +67,6 @@
                     <Button x:Name="redo" Content="Redo" Width="51" Background="GhostWhite" Click="redo_Click"/>
                 </StackPanel>
             </Canvas>
-            <!--
-            <controls:UniformGrid x:Name="newMyGrid" Margin="10" Rows="1" Columns="4" Height="303" ClipToBounds="True">
-                <Button  x:Name="addButton" Content="+" Height="30" Width="50" Margin="11,10"  Opacity="0.7" Background="#0C000000" BorderBrush="#7F000000" KeyDown="Add_KeyDown" Click="Add_Click"/>
-                <Button Content="1" Height="30" Width="50" Margin="11,10" KeyDown="Button1_KeyDown" Click="Button1_Click"/>
-                <Button Content="2" Height="30" Width="50" Margin="14,10,13,10" KeyDown="Button2_KeyDown" Click="Button2_Click"/>
-                <Button Content="3" Height="30" Width="50" Margin="11,1" KeyDown="Button3_KeyDown" Click="Button3_Click"/>
-            </controls:UniformGrid>
--->
-
         </StackPanel>
-        <!--   <Grid x:Name="buttonGrid" Margin="0,0,10,61" Height="0" Width="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*" />
-                    <RowDefinition Height="1*" />
-                    <RowDefinition Height="1*" />
-                </Grid.RowDefinitions>
-
-                <Button Grid.Column="0" Grid.Row="0" x:Name="addButton" Content="+" Width="Auto" Margin="40,8,40,10"  Opacity="0.7" Background="#0C000000" BorderBrush="#7F000000" KeyDown="Add_KeyDown" Click="Add_Click"/>
-                <Button Grid.Column="1" Content="1" Width="Auto" Margin="40,14" KeyDown="Button1_KeyDown" Click="Button1_Click"/>
-                <Button Grid.Column="2" Content="2" Width="Auto" Margin="40,14" KeyDown="Button2_KeyDown" Click="Button2_Click"/>
-                <Button Grid.Column="3" Content="3" Width="Auto" Margin="40,12" KeyDown="Button3_KeyDown" Click="Button3_Click"/>
-            </Grid>
--->
     </ScrollViewer>
 </Window>
