--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/TitleBar.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/TitleBar.xaml
@@ -1,18 +1,24 @@
-﻿<wpf:UserControl
+﻿<UserControl
     x:Class="KeyStrokes.TitleBar"
     x:Name="titleBar"
-    xmlns:wpf="http://schemas.microsoft.com/netfx/2009/xaml/presentation" 
+    xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" Width="941">
 
-    <wpf:DockPanel x:Name="titleBarDock" VerticalAlignment="Top" Height="844">
 
-        <wpf:DockPanel x:Name="bar" wpf:DockPanel.Dock="Top" Background="GhostWhite" Height="24">
-            <wpf:TextBlock Text="Our App Name"/>
-            <wpf:Button Content="X" Margin="10,0" Width="30" HorizontalAlignment="right" BorderThickness="0" Background="GhostWhite" Click="Button_Click"/>
-        </wpf:DockPanel>
+    <Grid MouseDown="titlebar_MouseDown" Background="LightBlue" DockPanel.Dock="Top" x:Name="titlebar" Height="40" >
+        <Button Panel.ZIndex="5" VerticalAlignment="Center" HorizontalAlignment="Left" Width="50" Height="40" BorderBrush="#00CCCCFF" Content="☰" Click="MenuClick" Margin="0" Background="#00CCCCFF" FontSize="18"/>
 
-    </wpf:DockPanel>
+        <Button x:Name="minimize" HorizontalAlignment="Right" Margin="0,0,125,0" Height="40" Width="50" Click="minimize_Click" BorderBrush="#00707070" Background="#00CCCCFF" VerticalAlignment="Top">
+            <TextBlock Text="&#xE949;" FontFamily="Segoe MDL2 Assets" FontSize="10" />
+        </Button>
+        <Button x:Name="maximize" HorizontalAlignment="Right" Margin="0,0,70,0" Width="50" Click="maximize_Click" Background="#00CCCCFF" BorderBrush="#00CCCCFF" Height="40" VerticalAlignment="Top">
+            <TextBlock Text="&#xE739;" FontFamily="Segoe MDL2 Assets" FontSize="10" />
+        </Button>
+        <Button x:Name="close" VerticalAlignment="Top" Margin="0,0,15,0" Width="50" Height="40" Click="close_Click" BorderBrush="#00CCCCFF" Background="#00CCCCFF" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalContentAlignment="Center" >
+            <TextBlock Text="&#xE106;" FontFamily="Segoe MDL2 Assets" FontSize="10" />
+        </Button>
+    </Grid>
 
-</wpf:UserControl>
+</UserControl>
