--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/TitleBar.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/TitleBar.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/netfx/2009/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" Width="941">
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
 
 
     <Grid MouseDown="titlebar_MouseDown" Background="LightBlue" DockPanel.Dock="Top" x:Name="titlebar" Height="40" >
