--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/AddButtonWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/AddButtonWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KeyStrokes.AddButtonWindow"
+﻿<UserControl x:Class="KeyStrokes.AddButtonWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,14 +6,15 @@
         xmlns:local="clr-namespace:KeyStrokes"
         mc:Ignorable="d"
         Height="355.249" Width="399.127"
-        Background="GhostWhite">
+        Background="White">
 
-    <StackPanel x:Name="content" Background="GhostWhite" Margin="26,10,21,10">
+    <StackPanel x:Name="content" Background="#00F8F8FF" Margin="26,10,21,10">
+        
         <TextBlock Text="Shortcut Name: "/>
         <TextBox x:Name="nameInput"
                     Width="338"
                     Height="25"
-                    HorizontalAlignment="Left"> 
+                    HorizontalAlignment="Left">
         </TextBox>
 
         <TextBlock Text="Application(s) seperated by a comma:" Margin="0,10,0,0"/>
@@ -42,12 +43,11 @@
         <StackPanel x:Name="hotkeyDisplay" Orientation="Horizontal">
             <TextBlock Text="HotKey = "></TextBlock>
         </StackPanel>
-
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
-            <Button x:Name="cancel_btn" Content="Cancel" Click="Click_Cancel" Background="PaleVioletRed"/>
-            <Button x:Name="confirm_btn" Content="Confirm" Click="Click_Confirm" Background="ForestGreen"/>
-        </StackPanel>
+        <Grid HorizontalAlignment="Center" Margin="10,10,10,0" Width="332" Height="89">
+            <Button x:Name="cancel_btn" Content="Cancel" Click="Click_Cancel" Background="PaleVioletRed" HorizontalAlignment="Left" Margin="10,23,0,20" Width="141" VerticalAlignment="Center" Height="46"/>
+            <Button x:Name="confirm_btn" Content="Add Button" Click="Click_Confirm" Background="LightBlue" HorizontalAlignment="Right" Margin="0,23,10,20" Width="141" VerticalAlignment="Center" Height="46"/>
+        </Grid>
 
 
     </StackPanel>
-</Window>
+</UserControl>
