--- a/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
+++ b/Software Innovation for Dual Screen Notebook/KeyStrokes/MainWindow.xaml
@@ -10,6 +10,7 @@
         Background="FloralWhite"
         ResizeMode="NoResize"
         Title="Software Innovation for Dual Screen Notebook"
+        Closing="CloseWindow"
         >
     <Grid x:Name="myGrid">
         <TextBlock TextAlignment="Center" FontSize="24" Margin="180,10,180,229">
@@ -17,7 +18,8 @@
         </TextBlock>
         <!--<Button Height="50" Width="50" Margin="0,-150,0,0"/>-->
         <ScrollViewer Name="ButtonViewholder" PanningMode="HorizontalOnly" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Hidden" >
-            <StackPanel Name="MyStack" RenderTransformOrigin="0.173,1.371" Orientation="Horizontal" Height="213" VerticalAlignment="Top">
+            <StackPanel Name="MyStack" RenderTransformOrigin="0.173,1.371" Orientation="Horizontal" Height="196" VerticalAlignment="Top">
+                <!--
                 <Button Height="75" Width="90" Margin="11,10" KeyDown="Button1_KeyDown" Click="Button1_Click">
                     <DockPanel>
                         <Image Source="Images/lor.jpg" Height="72" Width="75" RenderTransformOrigin="0.455,-0.263"/>
@@ -36,7 +38,7 @@
                         <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="-80,0,5,-20">3</TextBlock>
                     </DockPanel>
                 </Button>
-
+                -->
             </StackPanel>
         </ScrollViewer>
         
